cp project/force-app/main/default/objects/Partner__c/Partner__c.object-meta.xml
<CustomObject>
    <description>Master record representing a Channel Partner firm or individual broker.</description>
    <label>Channel Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>