cp project/force-app/main/default/objects/Partner__c/fields/Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name__c</fullName>
    <label>Account Holder Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>