cp project/force-app/main/default/objects/Partner__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Bank Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>