cp project/force-app/main/default/objects/Partner__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Official Email</label>
    <type>Email</type>
</CustomField>