cp project/force-app/main/default/objects/Partner__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <label>IFSC / Routing Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>