cp project/force-app/main/default/objects/Partner__c/fields/Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Code__c</fullName>
    <displayFormat>CP-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Partner Code</label>
    <type>AutoNumber</type>
</CustomField>