cp project/force-app/main/default/objects/Partner__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Individual Broker</fullName>
                    <default>true</default>
                    <label>Individual Broker</label>
                </value>
                <value>
                    <fullName>Brokerage Firm</fullName>
                </value>
                <value>
                    <fullName>Corporate Agency</fullName>
                </value>
                <value>
                    <fullName>Strategic Partner</fullName>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>