cp project/force-app/main/default/objects/Partner__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>