cp project/force-app/main/default/objects/Partner__c/fields/Total_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Bookings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>