cp project/force-app/main/default/objects/Partner__c/fields/Total_Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Commission Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>