cp project/force-app/main/default/objects/Partner__c/fields/Total_Commission_Pending__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Pending__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Commission Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>