cp project/force-app/main/default/objects/Partner__c/fields/Total_Leads_Registered__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads_Registered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Leads Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>