cp project/force-app/main/default/objects/Partner__c/validationRules/Approval_Requires_KYC_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Requires_KYC_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Approved"), NOT(ISPICKVAL(KYC_Status__c, "Approved")))</errorConditionFormula>
    <errorMessage>Cannot approve Channel Partner until KYC status is Approved.</errorMessage>
</ValidationRule>