cp project/force-app/main/default/objects/Partner__c/validationRules/PAN_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(PAN_Number__c)), NOT(REGEX(PAN_Number__c, "[A-Z]{5}[0-9]{4}[A-Z]{1}")))</errorConditionFormula>
    <errorMessage>Invalid PAN format. Must be 5 uppercase letters, 4 digits, 1 uppercase letter (e.g. ABCDE1234F).</errorMessage>
</ValidationRule>